<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.marcusposey.cadtra.activity.ActiveSessionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="327dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1">

            <TextView
                android:id="@+id/paceDisplay"
                android:layout_width="90dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="0:00"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/pauseResumeButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/timeDisplay"
                android:layout_width="90dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:text="00:00"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/distanceDisplay"
                android:layout_width="90dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="0.00"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/startStopButton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.6"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="90dp"
                android:layout_height="0dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/pace"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="90dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/time"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="90dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/distance"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/pauseResumeButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="51dp"
                android:text="@string/Pause"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_constraintRight_creator="1" />

            <Button
                android:id="@+id/startStopButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="51dp"
                android:text="@string/Start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_constraintLeft_creator="1" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</FrameLayout>
